--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
 
     </section>
 
-
-
     <section id="about">
         <div class="about-container">
             <div class="about-text">
@@ -83,12 +81,16 @@
         <h2 class="section-heading">What My Clients Say</h2>
         <div class="testimonials-container">
             <blockquote>
-                <p>"A fantastic experience! Highly recommend."</p>
-                <cite>- Client A</cite>
+                <p>"This service was fantastic! Highly recommend."</p>
+                <cite>- John Doe</cite>
             </blockquote>
             <blockquote>
-                <p>"Professional and dedicated, delivered beyond expectations."</p>
-                <cite>- Client B</cite>
+                <p>"A life-changing experience. I learned so much."</p>
+                <cite>- Jane Smith</cite>
+            </blockquote>
+            <blockquote>
+                <p>"Professional and reliable. Will use again."</p>
+                <cite>- Alex Johnson</cite>
             </blockquote>
         </div>
     </section>
@@ -99,7 +101,7 @@
             <input type="text" placeholder="Your Name" required>
             <input type="email" placeholder="Your Email" required>
             <textarea placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
+            <button class="submit-button" type="submit">Send Message</button>
         </form>
     </section>
 
@@ -108,6 +110,8 @@
         <p><a href="#home">Home</a> | <a href="#about">About</a> | <a href="#services">Services</a> | <a
                 href="#testimonials">Testimonials</a> | <a href="#contact">Contact</a></p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
