--- a/index.html
+++ b/index.html
@@ -114,14 +114,7 @@
                 href="#testimonials">Testimonials</a> | <a href="#contact">Contact</a></p>
     </footer>
 
-    <script>
-        const submit_message = document.querySelector("form");
-        submit_message.addEventListener("submit", (e)=>{
-            e.preventDefault();
-            alert("Thankyou for reaching out to me!");
-            submit_message.reset();
-        })
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
